// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders correctly 1`] = `
<path
  className="Link"
  d="M2,1C5.5,1 5.5,5 9,5"
/>
`;

exports[`<Link> renders correctly with custom path 1`] = `
<path
  className="Link"
  d="M2,1 9,5"
/>
`;
